style(responsiveness): Fixed overflowing bug in low-res by removing justify-content and adding margin auto

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 body {
   background-color: #f1f1f1;
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 100vh;
 }
@@ -21,6 +20,7 @@ main {
   padding: 16px 25px;
   border-radius: 8px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 0 auto;
 }
 
 main h1 {
